removed flash, started over with flex

--- a/app.yaml
+++ b/app.yaml
@@ -4,8 +4,8 @@ runtime: python
 api_version: 1
 
 handlers:
-- url: /flash
-  static_dir: flash
+- url: /flex
+  static_dir: flex
 
 - url: /.*
   script: handler.py
